@@ -21,7 +21,6 @@ import org.apache.kafka.connect.util.ConnectorTaskId;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -56,13 +55,13 @@ public class ExtendedAssignment extends ConnectProtocol.Assignment {
 
     private static final ExtendedAssignment EMPTY = new ExtendedAssignment(
             CONNECT_PROTOCOL_V1, ConnectProtocol.Assignment.NO_ERROR, null, null, -1,
-            Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), 0);
+            new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), 0);
 
     /**
      * Create an assignment indicating responsibility for the given connector instances and task Ids.
      *
      * @param version Connect protocol version
-     * @param error error code for this assignment; {@code ConnectProtocol.Assignment.NO_ERROR}
+     * @param error error code for this assignment; {@link ConnectProtocol.Assignment#NO_ERROR}
      *              indicates no error during assignment
      * @param leader Connect group's leader Id; may be null only on the empty assignment
      * @param leaderUrl Connect group's leader URL; may be null only on the empty assignment
@@ -167,7 +166,7 @@ public class ExtendedAssignment extends ConnectProtocol.Assignment {
         // Using LinkedHashMap preserves the ordering, which is helpful for tests and debugging
         Map<String, Collection<Integer>> taskMap = new LinkedHashMap<>();
         Optional.ofNullable(revokedConnectorIds)
-                .orElseGet(Collections::emptyList)
+                .orElseGet(List::of)
                 .stream()
                 .distinct()
                 .forEachOrdered(connectorId -> {
@@ -177,7 +176,7 @@ public class ExtendedAssignment extends ConnectProtocol.Assignment {
                 });
 
         Optional.ofNullable(revokedTaskIds)
-                .orElseGet(Collections::emptyList)
+                .orElseGet(List::of)
                 .forEach(taskId -> {
                     String connectorId = taskId.connector();
                     Collection<Integer> connectorTasks =
@@ -244,7 +243,7 @@ public class ExtendedAssignment extends ConnectProtocol.Assignment {
 
         Object[] connectors = struct.getArray(key);
         if (connectors == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<String> connectorIds = new ArrayList<>();
         for (Object structObj : connectors) {
@@ -265,7 +264,7 @@ public class ExtendedAssignment extends ConnectProtocol.Assignment {
 
         Object[] tasks = struct.getArray(key);
         if (tasks == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<ConnectorTaskId> tasksIds = new ArrayList<>();
         for (Object structObj : tasks) {
