@@ -17,10 +17,7 @@
 package org.apache.kafka.connect.util;
 
 import org.apache.kafka.connect.runtime.WorkerConfig;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -33,9 +30,8 @@ import static org.apache.kafka.connect.runtime.TopicCreationConfig.DEFAULT_TOPIC
  * enabled for source connectors at the worker and the connector configurations.
  */
 public class TopicCreation {
-    private static final Logger log = LoggerFactory.getLogger(TopicCreation.class);
     private static final TopicCreation EMPTY =
-            new TopicCreation(false, null, Collections.emptyMap(), Collections.emptySet());
+            new TopicCreation(false, null, Map.of(), Set.of());
 
     private final boolean isTopicCreationEnabled;
     private final TopicCreationGroup defaultTopicGroup;
@@ -73,7 +69,7 @@ public class TopicCreation {
     }
 
     /**
-     * Check whether topic creation is enabled for this utility instance. This is state is set at
+     * Check whether topic creation is enabled for this utility instance. This state is set at
      * instantiation time and remains unchanged for the lifetime of every {@link TopicCreation}
      * object.
      *
@@ -118,7 +114,7 @@ public class TopicCreation {
 
     /**
      * Inform this utility instance that a topic has been created and its creation will no
-     * longer be required. After {@link #addTopic(String)} is called for a give {@param topic}
+     * longer be required. After this method is called for a given {@code topic},
      * any subsequent calls to {@link #isTopicCreationRequired} will return {@code false} for the
      * same topic.
      *
@@ -131,7 +127,7 @@ public class TopicCreation {
     }
 
     /**
-     * Get the first topic creation group that is configured to match the given {@param topic}
+     * Get the first topic creation group that is configured to match the given {@code topic}
      * name. If topic creation is enabled, any topic should match at least the default topic
      * creation group.
      *
